Fixed icon color dark mode + last changes

--- a/client/details.css
+++ b/client/details.css
@@ -27,6 +27,10 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+
+    & a {
+        color: var(--text-color);
+    }
 }
 
 .breadcrumbs .add-arrow::after {
@@ -185,6 +189,7 @@ main {
 
     &::before {
         content: url("/public/images/about-icon.svg");
+        stroke: var(--color-text);
         height: 1.5rem;
         width: 1.5rem;
         display: inline-block;
