--- a/client/home.css
+++ b/client/home.css
@@ -177,9 +177,7 @@
 
   img {
       border-radius: 8px;
-      /* border: .5px solid black; */
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 
   div {
